correlation and covariance

--- a/Chapter5WorkAlong.ipynb
+++ b/Chapter5WorkAlong.ipynb
@@ -7303,10 +7303,397 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas_datareader.data as web\n",
+    "all_data = {ticker: web.get_data_yahoo(ticker)\n",
+    "            for ticker in ['Aapl', 'IBM', 'MSFT', 'GOOG']}\n",
+    "price = pd.DataFrame({ticker: data['Adj Close']\n",
+    "                    for ticker, data in all_data.items()})\n",
+    "volume = pd.DataFrame({ticker: data['Volume']\n",
+    "                    for ticker, data in all_data.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aapl</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-11-04</th>\n",
+       "      <td>-0.003499</td>\n",
+       "      <td>-0.005671</td>\n",
+       "      <td>0.007305</td>\n",
+       "      <td>0.012896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-05</th>\n",
+       "      <td>0.003582</td>\n",
+       "      <td>0.022838</td>\n",
+       "      <td>-0.001129</td>\n",
+       "      <td>0.003753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-08</th>\n",
+       "      <td>-0.005553</td>\n",
+       "      <td>0.007524</td>\n",
+       "      <td>0.002767</td>\n",
+       "      <td>0.000740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-09</th>\n",
+       "      <td>0.002459</td>\n",
+       "      <td>-0.016680</td>\n",
+       "      <td>-0.003086</td>\n",
+       "      <td>-0.000690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-10</th>\n",
+       "      <td>-0.019163</td>\n",
+       "      <td>-0.005213</td>\n",
+       "      <td>-0.015330</td>\n",
+       "      <td>-0.017571</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Aapl       IBM      MSFT      GOOG\n",
+       "Date                                              \n",
+       "2021-11-04 -0.003499 -0.005671  0.007305  0.012896\n",
+       "2021-11-05  0.003582  0.022838 -0.001129  0.003753\n",
+       "2021-11-08 -0.005553  0.007524  0.002767  0.000740\n",
+       "2021-11-09  0.002459 -0.016680 -0.003086 -0.000690\n",
+       "2021-11-10 -0.019163 -0.005213 -0.015330 -0.017571"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns = price.pct_change()\n",
+    "\n",
+    "returns.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5054962101540244"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns['MSFT'].corr(returns['IBM'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001444425122392135"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns['MSFT'].cov(returns['IBM'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5054962101540244"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.MSFT.corr(returns.IBM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aapl</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Aapl</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.438959</td>\n",
+       "      <td>0.736373</td>\n",
+       "      <td>0.660783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBM</th>\n",
+       "      <td>0.438959</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.505496</td>\n",
+       "      <td>0.474820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>0.736373</td>\n",
+       "      <td>0.505496</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.778334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOG</th>\n",
+       "      <td>0.660783</td>\n",
+       "      <td>0.474820</td>\n",
+       "      <td>0.778334</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Aapl       IBM      MSFT      GOOG\n",
+       "Aapl  1.000000  0.438959  0.736373  0.660783\n",
+       "IBM   0.438959  1.000000  0.505496  0.474820\n",
+       "MSFT  0.736373  0.505496  1.000000  0.778334\n",
+       "GOOG  0.660783  0.474820  0.778334  1.000000"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aapl</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Aapl</th>\n",
+       "      <td>0.000362</td>\n",
+       "      <td>0.000138</td>\n",
+       "      <td>0.000241</td>\n",
+       "      <td>0.000213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBM</th>\n",
+       "      <td>0.000138</td>\n",
+       "      <td>0.000275</td>\n",
+       "      <td>0.000144</td>\n",
+       "      <td>0.000134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>0.000241</td>\n",
+       "      <td>0.000144</td>\n",
+       "      <td>0.000297</td>\n",
+       "      <td>0.000227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOG</th>\n",
+       "      <td>0.000213</td>\n",
+       "      <td>0.000134</td>\n",
+       "      <td>0.000227</td>\n",
+       "      <td>0.000288</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Aapl       IBM      MSFT      GOOG\n",
+       "Aapl  0.000362  0.000138  0.000241  0.000213\n",
+       "IBM   0.000138  0.000275  0.000144  0.000134\n",
+       "MSFT  0.000241  0.000144  0.000297  0.000227\n",
+       "GOOG  0.000213  0.000134  0.000227  0.000288"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.cov()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Aapl    0.438959\n",
+       "IBM     1.000000\n",
+       "MSFT    0.505496\n",
+       "GOOG    0.474820\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.corrwith(returns.IBM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Aapl   -0.071625\n",
+       "IBM    -0.138343\n",
+       "MSFT   -0.062200\n",
+       "GOOG   -0.114432\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.corrwith(volume)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unique Values, Value Counts, and Membership"
+   ]
   },
   {
    "cell_type": "code",
